--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -35,21 +35,28 @@ jobs:
       backendAzureRmContainerName: 'pat-tf-storage'
       backendAzureRmKey: 'terraform.tfstate'
 
-  - task: TerraformCLI@1
-    displayName: 'Terraform Init'
-    inputs:
-      command: init
-      backendType: azurerm
+  - template: Templates\Steps\Terraform\terraform-plan-step.yml@templates
+    parameters:
+      name: 'AccessTokenFunctionapp'
       workingDirectory: $(System.DefaultWorkingDirectory)/RenewDevopsPAT/Infrastructure/Terraform
-      backendServiceArm: $(environmentServiceName)
-      #ensureBackend: true
-      backendAzureRmResourceGroupName: $(devBackendAzureRmResourceGroupName)
-      backendAzureRmResourceGroupLocation: $(backendAzureRmResourceGroupLocation)
-      backendAzureRmStorageAccountName: $(devBackendAzureRmStorageAccountName)
-      backendAzureRmStorageAccountSku: 'Standard_RAGRS'
-      backendAzureRmContainerName: 'pat-tf-storage'
-      allowTelemetryCollection: true
-      backendAzureRmKey: 'terraform.tfstate'
+      environmentServiceName: $(environmentServiceName)
+      planCommandOptions: '-var-file="Variables/dev.tfvars" -var="devops_organization_name=$(organizationName)"'
+
+  # - task: TerraformCLI@1
+  #   displayName: 'Terraform Init'
+  #   inputs:
+  #     command: init
+  #     backendType: azurerm
+  #     workingDirectory: $(System.DefaultWorkingDirectory)/RenewDevopsPAT/Infrastructure/Terraform
+  #     backendServiceArm: $(environmentServiceName)
+  #     #ensureBackend: true
+  #     backendAzureRmResourceGroupName: $(devBackendAzureRmResourceGroupName)
+  #     backendAzureRmResourceGroupLocation: $(backendAzureRmResourceGroupLocation)
+  #     backendAzureRmStorageAccountName: $(devBackendAzureRmStorageAccountName)
+  #     backendAzureRmStorageAccountSku: 'Standard_RAGRS'
+  #     backendAzureRmContainerName: 'pat-tf-storage'
+  #     allowTelemetryCollection: true
+  #     backendAzureRmKey: 'terraform.tfstate'
 
   # - template: Templates/Jobs/Terraform/terraform-apply-job.yml@templates
   #   parameters:
