--- a/.gitignore
+++ b/.gitignore
@@ -274,11 +274,12 @@ __pycache__/
 crash.log
 crash.*.log
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# Normally: "Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
+# to change depending on the environment."
+# NOTE: Actually only storing nonsensitive info in tfvars files currently. To consider putting in blob storage + access key in kv... soon tm
+#*.tfvars
 *.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
