--- a/Pipelines/apply-function-app-infrastructure-template.yml
+++ b/Pipelines/apply-function-app-infrastructure-template.yml
@@ -1,24 +1,16 @@
 parameters:
-- name: backendAzureRmContainerName
-- name: environmentServiceName
 - name: backendAzureRmResourceGroupName
-- name: backendAzureRmResourceGroupLocation
 - name: backendAzureRmStorageAccountName
-- name: backendAzureRmKey
-  default: 'terraform.tfstate'
-- name: planCommandOptions
+- name: tfVarsFile
 
 jobs:
-- template: PipelineTemplates/Jobs/Terraform/terraform-apply-job.yml@templates
+- template: Templates/Jobs/Terraform/terraform-apply-job.yml@templates
   parameters:
     name: 'AccessTokenFunctionapp'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/Infrastructure/Terraform'
-    backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
-    environmentServiceName: ${{ parameters.environmentServiceName }}
+    workingDirectory: $(System.DefaultWorkingDirectory)/RenewDevopsPAT/Infrastructure/Terraform
+    environmentServiceName: $(environmentServiceName)
     backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
-    backendAzureRmResourceGroupLocation: ${{ parameters.backendAzureRmResourceGroupLocation }}
+    backendAzureRmResourceGroupLocation: $(backendAzureRmResourceGroupLocation)
     backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
-    backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
-    planCommandOptions: ${{ parameters.planCommandOptions }}
-
-
+    backendAzureRmContainerName: 'pat-tf-storage'
+    planCommandOptions: '-var-file="Variables/${{ parameters.tfVarsFile }}" -var="devops_organization_name=$(organizationName)"'
