--- a/Pipelines/destroy-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/destroy-dev-function-app-infrastructure-pipeline.yml
@@ -4,9 +4,14 @@ resources:
   repositories:
     - repository: templates
       type: github
-      name: tumsky12/SharedInfrastructure
+      name: tumsky12/CorePipelineTemplates
       endpoint: GitHubConnection
-      ref:  'refs/heads/terraform-pipelines-changes'
+      ref:  'refs/heads/feature/terraform-pipeline-changes'
+    - repository: terraformModules
+      type: github
+      name: tumsky12/CoreTerraformModules
+      endpoint: GitHubConnection
+      ref:  'refs/heads/feature/terraform-pipeline-changes'
 
 variables:
 - group: shared-variable-group
