Feature/terraform pipeline changes (#3)
Various changes to initial pipeline work to account for separation of pipeline templates and terraform modules from shared infra. Addition of new config values to function app.

--- a/Pipelines/apply-function-app-infrastructure-template.yml
+++ b/Pipelines/apply-function-app-infrastructure-template.yml
@@ -1,6 +1,16 @@
-stages:
-- template: PipelineTemplates/terraform-apply-template.yml@templates
+parameters:
+- name: backendAzureRmResourceGroupName
+- name: backendAzureRmStorageAccountName
+- name: tfVarsFile
+
+jobs:
+- template: Templates/Jobs/Terraform/terraform-apply-job.yml@templates
   parameters:
-    name: 'AccessTokenFunctionapp'
-    terraformWorkingDir: '$(System.DefaultWorkingDirectory)/infrastructure/Terraform'
+    name: 'AccessTokenFunctionApp'
+    workingDirectory: $(System.DefaultWorkingDirectory)/RenewDevopsPAT/Infrastructure/Terraform
+    environmentServiceName: $(environmentServiceName)
+    backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
+    backendAzureRmResourceGroupLocation: $(backendAzureRmResourceGroupLocation)
+    backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
     backendAzureRmContainerName: 'pat-tf-storage'
+    planCommandOptions: '-var-file="Variables/${{ parameters.tfVarsFile }}" -var="devops_organization_name=$(organizationName)"'
