--- a/AccessTokenFunctionApp/scr/AccessTokenFunctionApp/AccessTokenFunctionApp.csproj
+++ b/AccessTokenFunctionApp/scr/AccessTokenFunctionApp/AccessTokenFunctionApp.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup>
